[metadata]
name = brick
version = 2014.2
summary = OpenStack Block Storage Agent
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    brick
scripts =
    bin/brick-all
    bin/brick-api
    bin/brick-volume

[entry_points]
console_scripts =
    brick-rootwrap = oslo.rootwrap.cmd:main
# These are for backwards compat with Havana notification_driver configuration values
oslo.messaging.notify.drivers =
    brick.openstack.common.notifier.log_notifier = oslo.messaging.notify._impl_log:LogDriver
    brick.openstack.common.notifier.no_op_notifier = oslo.messaging.notify._impl_noop:NoOpDriver
    brick.openstack.common.notifier.rpc_notifier2 = oslo.messaging.notify._impl_messaging:MessagingV2Driver
    brick.openstack.common.notifier.rpc_notifier = oslo.messaging.notify._impl_messaging:MessagingDriver
    brick.openstack.common.notifier.test_notifier = oslo.messaging.notify._impl_test:TestDriver

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = brick/locale
domain = brick

[update_catalog]
domain = brick
output_dir = brick/locale
input_file = brick/locale/brick.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = brick/locale/brick.pot
